<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:empub="http://schemas.android.com/apk/res-auto" >

    <ListPreference
        android:dialogTitle="@string/loopxtimestitle"
        android:entries="@array/cycles"
        android:entryValues="@array/mycycles"
        android:key="loopxtimes"
        android:summary="@string/loopxtimessummary"
        android:title="@string/loopxtimestitle" />
    <ListPreference
        android:dialogTitle="@string/timebetweensostitle"
        android:entries="@array/seconds"
        android:entryValues="@array/seconds"
        android:key="timebetweenloops"
        android:summary="@string/timelbetweensossummary"
        android:title="@string/timebetweensostitle" />
    <ListPreference
        android:dialogTitle="@string/sosspeedtitle"
        android:entries="@array/speed"
        android:entryValues="@array/speednumbers"
        android:key="sosspeed"
        android:summary="@string/sosspeedsummary"
        android:title="@string/sosspeedtitle" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="loopuntillight"
        android:summary="@string/loopuntillightsummary"
        android:title="@string/loopuntillighttitle" />

    <ListPreference
        android:dependency="loopuntillight"
        android:dialogTitle="@string/lightsensitivitydialogtitle"
        android:entries="@array/lightsensitivity"
        android:entryValues="@array/lightsensitivitynumbers"
        android:key="lightsensitivity"
        android:summary="@string/lightsensitivitysummary"
        android:title="@string/lightsensitivitytitle" />

    <ListPreference
        android:dialogTitle="@string/batterypercent"
        android:entries="@array/percentage"
        android:entryValues="@array/cleanpercentage"
        android:key="batterypct"
        android:summary="@string/batterypercentsummary"
        android:title="@string/batterypercenttitle" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="keepscreenon"
        android:summary="@string/keepscreenonsummary"
        android:title="@string/keepscreenontitle" />
    <CheckBoxPreference
        android:dependency="keepscreenon"
        android:defaultValue="false"
        android:key="forcetimeout"
        android:summary="@string/forcetimeoutsummary"
        android:title="@string/forcetimeouttitle" />

</PreferenceScreen>